fixed review dark mode

--- a/css/review.css
+++ b/css/review.css
@@ -1,4 +1,5 @@
-div#reviewFrame {
+div#reviewFrame,
+div#answerContainer {
     background: var(--background-color) !important;
 }
 
